feat: implement absolute path

--- a/TODO
+++ b/TODO
@@ -64,7 +64,7 @@ Todo:
   Критерии оценки:  
 
     `Максимальный балл за задание: 300 баллов`:
-      ☐ Non-interactive scope +30
+      ☐ Non-interactive scope +30  <========================================================= CURRENT TASK
         ☐ Данные отображаются в таблице в соответствии с функциональными требованиями. +30
           - Подумайте, какую лучше выбрать технику вёрстки таблицы. 
           - Обычные блоки, блоки с абсолютной позицией, \<table>, flexbox, etc - правильного варианта нет,
