--- a/TODO
+++ b/TODO
@@ -38,9 +38,9 @@ Todo:
     - Для удобства проверки задания поддержка Redux DevTools должна быть не только в девелоперской версии (aka `npm run start`), но и в "продакшн" сборке (aka `npm run build`).
 
     Нужно использовать:
-      ☐ React  
+      ✔ React @done(20-03-04 10:46)
       ☐ Redux with DevTools
-      ☐ приватный репозиторий на github  
+      ✔ приватный репозиторий на github @done(20-03-04 10:46)
       ☐ хостинг для готового приложения - netlify, heroku, gh-pages или любой другой 
 
     Можно использовать:
