feat: implement non-interactive scope

--- a/TODO
+++ b/TODO
@@ -64,14 +64,14 @@ Todo:
   Критерии оценки:  
 
     `Максимальный балл за задание: 300 баллов`:
-      ☐ Non-interactive scope +30  <========================================================= CURRENT TASK
-        ☐ Данные отображаются в таблице в соответствии с функциональными требованиями. +30
+      ✔ Non-interactive scope +30 @done(20-03-06 09:47)
+        ✔ Данные отображаются в таблице в соответствии с функциональными требованиями. +30 @done(20-03-06 09:47)
           - Подумайте, какую лучше выбрать технику вёрстки таблицы. 
           - Обычные блоки, блоки с абсолютной позицией, \<table>, flexbox, etc - правильного варианта нет,
           - но от выборанной техники будет зависеть реализация некоторых из требований ниже.
 
     `Basic scope +70`:
-      ☐ Реализована сортировка по одной колонке. +10
+      ☐ Реализована сортировка по одной колонке. +10  <========================================================= CURRENT TASK
       ☐ Понятная индикация, по какой колонке применена сортировка и в каком направлении (по возрастанию или убыванию) +10
       ☐ Реализована фильтрация по введённому тексту (поиск подстроки как минимум в значениях одной колонки). +10
         ☐ (В дополнение к предыдущему) При фильтрации по тексту производится поиск подстроки в нескольких колонках. +10 
