--- a/TODO
+++ b/TODO
@@ -71,8 +71,8 @@ Todo:
           - но от выборанной техники будет зависеть реализация некоторых из требований ниже.
 
     `Basic scope +70`:
-      ☐ Реализована сортировка по одной колонке. +10  <========================================================= CURRENT TASK
-      ☐ Понятная индикация, по какой колонке применена сортировка и в каком направлении (по возрастанию или убыванию) +10
+      ✔ Реализована сортировка по одной колонке. +10 @done(20-03-10 15:51)
+      ☐ Понятная индикация, по какой колонке применена сортировка и в каком направлении (по возрастанию или убыванию) +10  <========================================================= CURRENT TASK
       ☐ Реализована фильтрация по введённому тексту (поиск подстроки как минимум в значениях одной колонки). +10
         ☐ (В дополнение к предыдущему) При фильтрации по тексту производится поиск подстроки в нескольких колонках. +10 
       ☐ Реализована фильтрация по boolean колонке с помощью UI-элемента toggle иди аналогичного. +10
