--- a/TODO
+++ b/TODO
@@ -72,10 +72,10 @@ Todo:
 
     `Basic scope +70`:
       ✔ Реализована сортировка по одной колонке. +10 @done(20-03-10 15:51)
-      ☐ Понятная индикация, по какой колонке применена сортировка и в каком направлении (по возрастанию или убыванию) +10  <========================================================= CURRENT TASK
-      ☐ Реализована фильтрация по введённому тексту (поиск подстроки как минимум в значениях одной колонки). +10
-        ☐ (В дополнение к предыдущему) При фильтрации по тексту производится поиск подстроки в нескольких колонках. +10 
-      ☐ Реализована фильтрация по boolean колонке с помощью UI-элемента toggle иди аналогичного. +10
+      ✔ Понятная индикация, по какой колонке применена сортировка и в каком направлении (по возрастанию или убыванию) +10 @done(20-03-10 15:53)
+      ✔ Реализована фильтрация по введённому тексту (поиск подстроки как минимум в значениях одной колонки). +10 @done(20-03-11 17:46)
+        ☐ (В дополнение к предыдущему) При фильтрации по тексту производится поиск подстроки в нескольких колонках. +10
+      ☐ Реализована фильтрация по boolean колонке с помощью UI-элемента toggle или аналогичного. +10   <========================================================= CURRENT TASK
       ☐ Реализована фильтрация по enum колонке. Можно использовать react-select или аналогичный UI-элемент. +10
         ☐ (В дополнение к предыдущему) При фильтрации по enum колонке можно выбрать несколько значений (multiselect UI-элемент). +10 
 
