--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@
 @Example - `https://uimovement.com/design/data-table-filter/`
 @Example2 - `https://dribbble.com/shots/9404247-SaaS-Software-Budgets-Control-UGEM/attachments/1428945?mode=media/`
 @Example3 - `https://dribbble.com/shots/5744805-OEM-Network-Dashboard/attachments/`
+@Example3 - `https://adoring-bose-963fac.netlify.com/`
 @Demo - `https://react-datagrid.netlify.com/`
 
 Todo:
@@ -75,8 +76,8 @@ Todo:
       ✔ Понятная индикация, по какой колонке применена сортировка и в каком направлении (по возрастанию или убыванию) +10 @done(20-03-10 15:53)
       ✔ Реализована фильтрация по введённому тексту (поиск подстроки как минимум в значениях одной колонки). +10 @done(20-03-11 17:46)
         ☐ (В дополнение к предыдущему) При фильтрации по тексту производится поиск подстроки в нескольких колонках. +10
-      ☐ Реализована фильтрация по boolean колонке с помощью UI-элемента toggle или аналогичного. +10   <========================================================= CURRENT TASK
-      ☐ Реализована фильтрация по enum колонке. Можно использовать react-select или аналогичный UI-элемент. +10
+      ☐ Реализована фильтрация по boolean колонке с помощью UI-элемента toggle или аналогичного. +10
+      ☐ Реализована фильтрация по enum колонке. Можно использовать react-select или аналогичный UI-элемент. +10   <========================================================= CURRENT TASK
         ☐ (В дополнение к предыдущему) При фильтрации по enum колонке можно выбрать несколько значений (multiselect UI-элемент). +10 
 
     `Advanced scope +150`:
