feat: implement global-search

--- a/TODO
+++ b/TODO
@@ -76,13 +76,13 @@ Todo:
       ✔ Реализована сортировка по одной колонке. +10 @done(20-03-10 15:51)
       ✔ Понятная индикация, по какой колонке применена сортировка и в каком направлении (по возрастанию или убыванию) +10 @done(20-03-10 15:53)
       ✔ Реализована фильтрация по введённому тексту (поиск подстроки как минимум в значениях одной колонки). +10 @done(20-03-11 17:46)
-        ☐ (В дополнение к предыдущему) При фильтрации по тексту производится поиск подстроки в нескольких колонках. +10   <========================================================= CURRENT TASK
+        ✔ (В дополнение к предыдущему) При фильтрации по тексту производится поиск подстроки в нескольких колонках. +10 @done(20-03-13 12:51)
       ✔ Реализована фильтрация по boolean колонке с помощью UI-элемента toggle или аналогичного. +10 @done(20-03-12 13:14)
       ✔ Реализована фильтрация по enum колонке. Можно использовать react-select или аналогичный UI-элемент. +10 @done(20-03-13 10:53)
         ✔ (В дополнение к предыдущему) При фильтрации по enum колонке можно выбрать несколько значений (multiselect UI-элемент). +10 @done(20-03-13 10:53)
 
     `Advanced scope +150`:
-      ☐ С зажатым shift можно сортировать по нескольким колонкам. +20
+      ☐ С зажатым shift можно сортировать по нескольким колонкам. +20   <========================================================= CURRENT TASK
       ☐ Реализована [виртуализация рядов](`https://web.dev/virtualize-long-lists-react-window/`) для отображении большого объёма данных. +30.        
         - Можно использовать библиотеку *react-window* для виртуализации, но самостоятельная имплементация этой техники одобряется и поощрается авторами задания.
       ☐ Функцию виртуализации можно выключить c помощью toggle и сравнить скорость работы и отрисовки страницы. +10
