feat: implement sort with shift

--- a/TODO
+++ b/TODO
@@ -82,8 +82,8 @@ Todo:
         ✔ (В дополнение к предыдущему) При фильтрации по enum колонке можно выбрать несколько значений (multiselect UI-элемент). +10 @done(20-03-13 10:53)
 
     `Advanced scope +150`:
-      ☐ С зажатым shift можно сортировать по нескольким колонкам. +20   <========================================================= CURRENT TASK
-      ☐ Реализована [виртуализация рядов](`https://web.dev/virtualize-long-lists-react-window/`) для отображении большого объёма данных. +30.        
+      ✔ С зажатым shift можно сортировать по нескольким колонкам. +20 @done(20-03-13 18:09)
+      ☐ Реализована [виртуализация рядов](`https://web.dev/virtualize-long-lists-react-window/`) для отображении большого объёма данных. +30.           <========================================================= CURRENT TASK
         - Можно использовать библиотеку *react-window* для виртуализации, но самостоятельная имплементация этой техники одобряется и поощрается авторами задания.
       ☐ Функцию виртуализации можно выключить c помощью toggle и сравнить скорость работы и отрисовки страницы. +10
       ☐ Ряд таблицы можно выделить кликом и применить к нему какое-либо действие. Выделенный ряд должен отличатся визуально. Самый простой пример действия - удаление из таблицы, но можно придумать любое другое. +20
