--- a/TODO
+++ b/TODO
@@ -6,20 +6,23 @@
 @Example - `https://uimovement.com/design/data-table-filter/`
 @Example2 - `https://dribbble.com/shots/9404247-SaaS-Software-Budgets-Control-UGEM/attachments/1428945?mode=media/`
 @Example3 - `https://dribbble.com/shots/5744805-OEM-Network-Dashboard/attachments/`
-@Example_complete - `https://adoring-bose-963fac.netlify.com/`
+@Example_complete_1 - `https://adoring-bose-963fac.netlify.com/`
 @Example_complete_2 - `https://datagrid-yuskiv.netlify.com/`
+@Example_complete_3 - `https://datagrid-slolkunchik.netlify.com/#/`
+@Example_complete_4 - `https://blackjack-data-grid.netlify.com/`
+@Example_complete_5 - `https://hopeful-kirch-b901c7.netlify.com/`
 @Demo - `https://react-datagrid.netlify.com/`
 
 Todo:
 
   Функциональные требования:
-    ☐ Таблица может содержать любые данные.
+    ✔ Таблица может содержать любые данные.
       - Например, можно отображать список студентов курса rss-2019q3-react.  
       
-    ☐ Источником данных может быть любой сторонний API, локальный json файл или можно генерировать случайные данные, например с помощью faker.js.      
-      ☐ Минимум 1000 рядов.
-      ☐ Минимум 7 колонок.  
-      ☐ Значения в колонках минимум трёх разных типов из списка ниже. 
+    ✔ Источником данных может быть любой сторонний API, локальный json файл или можно генерировать случайные данные, например с помощью faker.js.      
+      ✔ Минимум 1000 рядов.
+      ✔ Минимум 7 колонок.  
+      ✔ Значения в колонках минимум трёх разных типов из списка ниже. 
 
     Примеры типов для ячеек:
       - string - отображается как есть, но но надо либо ограничить длину строки, либо использовать `text-overflow: ellipsis` 
@@ -31,8 +34,8 @@ Todo:
       - boolean  
       
   Интерактивные функции таблицы:
-    ☐ Сортировка
-    ☐ Фильтрация
+    ✔ Сортировка
+    ✔ Фильтрация
     ☐ Выбор рядов и действия с ними
 
 
@@ -43,7 +46,7 @@ Todo:
       ✔ React @done(20-03-04 10:46)
       ☐ Redux with DevTools
       ✔ приватный репозиторий на github @done(20-03-04 10:46)
-      ☐ хостинг для готового приложения - netlify, heroku, gh-pages или любой другой 
+      ✔ хостинг для готового приложения - netlify, heroku, gh-pages или любой другой 
 
     Можно использовать:
       - create-react-app  
@@ -56,8 +59,8 @@ Todo:
       - библиотеки для генерации данных  
 
     Нельзя использовать:
-      ☐ любые другие компоненты из сторонних библиотек
-      ☐ любые другие библиотеки, реализующие ключевую функциональность задания (например - сортировка и фильтрация).
+      ✔ любые другие компоненты из сторонних библиотек
+      ✔ любые другие библиотеки, реализующие ключевую функциональность задания (например - сортировка и фильтрация).
 
     Можно не использовать:
       - saga, thunk и любой другой middleware для сайд эффектов. Однако некоторые требования в hacker scope подразумевают использование middleware
@@ -83,13 +86,13 @@ Todo:
 
     `Advanced scope +150`:
       ✔ С зажатым shift можно сортировать по нескольким колонкам. +20 @done(20-03-13 18:09)
-      ☐ Реализована [виртуализация рядов](`https://web.dev/virtualize-long-lists-react-window/`) для отображении большого объёма данных. +30.           <========================================================= CURRENT TASK
+      ✔ Реализована [виртуализация рядов](`https://web.dev/virtualize-long-lists-react-window/`) для отображении большого объёма данных. +30. @done(20-03-17 15:11)
         - Можно использовать библиотеку *react-window* для виртуализации, но самостоятельная имплементация этой техники одобряется и поощрается авторами задания.
-      ☐ Функцию виртуализации можно выключить c помощью toggle и сравнить скорость работы и отрисовки страницы. +10
+      ☐ Функцию виртуализации можно выключить c помощью toggle и сравнить скорость работы и отрисовки страницы. +10           <========================================================= CURRENT TASK
       ☐ Ряд таблицы можно выделить кликом и применить к нему какое-либо действие. Выделенный ряд должен отличатся визуально. Самый простой пример действия - удаление из таблицы, но можно придумать любое другое. +20
         ☐ (В дополнение к предыдущему) С помощью зажатых Ctrl/shift и/или колонки чекбоксов слева можно выделить одновременно *несколько* рядов и применить к ним действие.  +20
       ☐ Можно настраивать видимость колонок (всех или некоторых) [демо1](`https://www.datatables.net/examples/api/show_hide.html`), [демо2](`http://filamentgroup.github.io/tablesaw/demo/toggle.html`) +20
-      ☐ Фиксированный заголовок таблицы aka sticky header, то есть при скролле таблицы строка с названиями колонок остаётся видна поверх данных. +10
+      ✔ Фиксированный заголовок таблицы aka sticky header, то есть при скролле таблицы строка с названиями колонок остаётся видна поверх данных. +10
       ☐ Фиксированная левая колонка. Принцип тот же, что и для sticky header, но левая колонка (как правило идентифицирующая данные в ряде, например - имя человека) остаётся видна при горизонтальном скролле. +20
 
     `Hacker scope +50`:
