--- a/TODO
+++ b/TODO
@@ -44,7 +44,7 @@ Todo:
 
     Нужно использовать:
       ✔ React @done(20-03-04 10:46)
-      ☐ Redux with DevTools
+      ☐ Redux with DevTools           <========================================================= CURRENT TASK
       ✔ приватный репозиторий на github @done(20-03-04 10:46)
       ✔ хостинг для готового приложения - netlify, heroku, gh-pages или любой другой 
 
@@ -88,7 +88,7 @@ Todo:
       ✔ С зажатым shift можно сортировать по нескольким колонкам. +20 @done(20-03-13 18:09)
       ✔ Реализована [виртуализация рядов](`https://web.dev/virtualize-long-lists-react-window/`) для отображении большого объёма данных. +30. @done(20-03-17 15:11)
         - Можно использовать библиотеку *react-window* для виртуализации, но самостоятельная имплементация этой техники одобряется и поощрается авторами задания.
-      ☐ Функцию виртуализации можно выключить c помощью toggle и сравнить скорость работы и отрисовки страницы. +10           <========================================================= CURRENT TASK
+      ✔ Функцию виртуализации можно выключить c помощью toggle и сравнить скорость работы и отрисовки страницы. +10
       ☐ Ряд таблицы можно выделить кликом и применить к нему какое-либо действие. Выделенный ряд должен отличатся визуально. Самый простой пример действия - удаление из таблицы, но можно придумать любое другое. +20
         ☐ (В дополнение к предыдущему) С помощью зажатых Ctrl/shift и/или колонки чекбоксов слева можно выделить одновременно *несколько* рядов и применить к ним действие.  +20
       ☐ Можно настраивать видимость колонок (всех или некоторых) [демо1](`https://www.datatables.net/examples/api/show_hide.html`), [демо2](`http://filamentgroup.github.io/tablesaw/demo/toggle.html`) +20
