feat: implement selection

--- a/TODO
+++ b/TODO
@@ -44,7 +44,7 @@ Todo:
 
     Нужно использовать:
       ✔ React @done(20-03-04 10:46)
-      ☐ Redux with DevTools           <========================================================= CURRENT TASK
+      ✔ Redux with DevTools
       ✔ приватный репозиторий на github @done(20-03-04 10:46)
       ✔ хостинг для готового приложения - netlify, heroku, gh-pages или любой другой 
 
@@ -89,9 +89,9 @@ Todo:
       ✔ Реализована [виртуализация рядов](`https://web.dev/virtualize-long-lists-react-window/`) для отображении большого объёма данных. +30. @done(20-03-17 15:11)
         - Можно использовать библиотеку *react-window* для виртуализации, но самостоятельная имплементация этой техники одобряется и поощрается авторами задания.
       ✔ Функцию виртуализации можно выключить c помощью toggle и сравнить скорость работы и отрисовки страницы. +10
-      ☐ Ряд таблицы можно выделить кликом и применить к нему какое-либо действие. Выделенный ряд должен отличатся визуально. Самый простой пример действия - удаление из таблицы, но можно придумать любое другое. +20
-        ☐ (В дополнение к предыдущему) С помощью зажатых Ctrl/shift и/или колонки чекбоксов слева можно выделить одновременно *несколько* рядов и применить к ним действие.  +20
-      ☐ Можно настраивать видимость колонок (всех или некоторых) [демо1](`https://www.datatables.net/examples/api/show_hide.html`), [демо2](`http://filamentgroup.github.io/tablesaw/demo/toggle.html`) +20
+      ✔ Ряд таблицы можно выделить кликом и применить к нему какое-либо действие. Выделенный ряд должен отличатся визуально. Самый простой пример действия - удаление из таблицы, но можно придумать любое другое. +20
+        ✔ (В дополнение к предыдущему) С помощью зажатых Ctrl/shift и/или колонки чекбоксов слева можно выделить одновременно *несколько* рядов и применить к ним действие.  +20
+      ☐ Можно настраивать видимость колонок (всех или некоторых) [демо1](`https://www.datatables.net/examples/api/show_hide.html`), [демо2](`http://filamentgroup.github.io/tablesaw/demo/toggle.html`) +20           <========================================================= CURRENT TASK
       ✔ Фиксированный заголовок таблицы aka sticky header, то есть при скролле таблицы строка с названиями колонок остаётся видна поверх данных. +10
       ☐ Фиксированная левая колонка. Принцип тот же, что и для sticky header, но левая колонка (как правило идентифицирующая данные в ряде, например - имя человека) остаётся видна при горизонтальном скролле. +20
 
