--- a/TODO
+++ b/TODO
@@ -91,12 +91,12 @@ Todo:
       ✔ Функцию виртуализации можно выключить c помощью toggle и сравнить скорость работы и отрисовки страницы. +10
       ✔ Ряд таблицы можно выделить кликом и применить к нему какое-либо действие. Выделенный ряд должен отличатся визуально. Самый простой пример действия - удаление из таблицы, но можно придумать любое другое. +20
         ✔ (В дополнение к предыдущему) С помощью зажатых Ctrl/shift и/или колонки чекбоксов слева можно выделить одновременно *несколько* рядов и применить к ним действие.  +20
-      ☐ Можно настраивать видимость колонок (всех или некоторых) [демо1](`https://www.datatables.net/examples/api/show_hide.html`), [демо2](`http://filamentgroup.github.io/tablesaw/demo/toggle.html`) +20           <========================================================= CURRENT TASK
+      ✔ Можно настраивать видимость колонок (всех или некоторых) [демо1](`https://www.datatables.net/examples/api/show_hide.html`), [демо2](`http://filamentgroup.github.io/tablesaw/demo/toggle.html`) +20
       ✔ Фиксированный заголовок таблицы aka sticky header, то есть при скролле таблицы строка с названиями колонок остаётся видна поверх данных. +10
       ☐ Фиксированная левая колонка. Принцип тот же, что и для sticky header, но левая колонка (как правило идентифицирующая данные в ряде, например - имя человека) остаётся видна при горизонтальном скролле. +20
 
     `Hacker scope +50`:
-      ☐ Сохранение значений для сортировки, фильтрации, видимости колонок (если реализовано) сохранаются в localStorage так, что при обновлении страницы состояние таблицы сохраняется. +20
+      ☐ Сохранение значений для сортировки, фильтрации, видимости колонок (если реализовано) сохранаются в localStorage так, что при обновлении страницы состояние таблицы сохраняется. +20           <========================================================= CURRENT TASK
       ☐ Экспорт данных в CSV файл (только видимые ряды с сохранением сортировки). +20
       ☐ Значения фильтров для текстовых и enum колонок можно передавать в querystring (приоритет выше, чем у localStorage). +10
 
