--- a/TODO
+++ b/TODO
@@ -11,7 +11,7 @@
 @Example_complete_3 - `https://datagrid-slolkunchik.netlify.com/#/`
 @Example_complete_4 - `https://blackjack-data-grid.netlify.com/`
 @Example_complete_5 - `https://hopeful-kirch-b901c7.netlify.com/`
-@Demo - `https://react-datagrid.netlify.com/`
+@Demo - `https://cl3r1k-react-datagrid.netlify.com/`
 
 Todo:
 
@@ -93,11 +93,11 @@ Todo:
         ✔ (В дополнение к предыдущему) С помощью зажатых Ctrl/shift и/или колонки чекбоксов слева можно выделить одновременно *несколько* рядов и применить к ним действие.  +20
       ✔ Можно настраивать видимость колонок (всех или некоторых) [демо1](`https://www.datatables.net/examples/api/show_hide.html`), [демо2](`http://filamentgroup.github.io/tablesaw/demo/toggle.html`) +20
       ✔ Фиксированный заголовок таблицы aka sticky header, то есть при скролле таблицы строка с названиями колонок остаётся видна поверх данных. +10
-      ☐ Фиксированная левая колонка. Принцип тот же, что и для sticky header, но левая колонка (как правило идентифицирующая данные в ряде, например - имя человека) остаётся видна при горизонтальном скролле. +20
+      ☐ Фиксированная левая колонка. Принцип тот же, что и для sticky header, но левая колонка (как правило идентифицирующая данные в ряде, например - имя человека) остаётся видна при горизонтальном скролле. +20           <========================================================= CURRENT TASK
 
     `Hacker scope +50`:
-      ☐ Сохранение значений для сортировки, фильтрации, видимости колонок (если реализовано) сохранаются в localStorage так, что при обновлении страницы состояние таблицы сохраняется. +20           <========================================================= CURRENT TASK
-      ☐ Экспорт данных в CSV файл (только видимые ряды с сохранением сортировки). +20
+      ✔ Сохранение значений для сортировки, фильтрации, видимости колонок (если реализовано) сохранаются в localStorage так, что при обновлении страницы состояние таблицы сохраняется. +20
+      ✔ Экспорт данных в CSV файл (только видимые ряды с сохранением сортировки). +20
       ☐ Значения фильтров для текстовых и enum колонок можно передавать в querystring (приоритет выше, чем у localStorage). +10
 
 
