feat: implement fixed left columns

--- a/TODO
+++ b/TODO
@@ -36,11 +36,11 @@ Todo:
   Интерактивные функции таблицы:
     ✔ Сортировка
     ✔ Фильтрация
-    ☐ Выбор рядов и действия с ними
+    ✔ Выбор рядов и действия с ними
 
 
   Технические требования: 
-    - Для удобства проверки задания поддержка Redux DevTools должна быть не только в девелоперской версии (aka `npm run start`), но и в "продакшн" сборке (aka `npm run build`).
+    ✔ Для удобства проверки задания поддержка Redux DevTools должна быть не только в девелоперской версии (aka `npm run start`), но и в "продакшн" сборке (aka `npm run build`).
 
     Нужно использовать:
       ✔ React @done(20-03-04 10:46)
@@ -50,7 +50,7 @@ Todo:
 
     Можно использовать:
       - create-react-app  
-      - lodash  
+      - lodash
       - TypeScript 
       - bootstrap и любые другие css фреймворки 
       - react-select и подобные простые компоненты для фильтров  
@@ -93,12 +93,12 @@ Todo:
         ✔ (В дополнение к предыдущему) С помощью зажатых Ctrl/shift и/или колонки чекбоксов слева можно выделить одновременно *несколько* рядов и применить к ним действие.  +20
       ✔ Можно настраивать видимость колонок (всех или некоторых) [демо1](`https://www.datatables.net/examples/api/show_hide.html`), [демо2](`http://filamentgroup.github.io/tablesaw/demo/toggle.html`) +20
       ✔ Фиксированный заголовок таблицы aka sticky header, то есть при скролле таблицы строка с названиями колонок остаётся видна поверх данных. +10
-      ☐ Фиксированная левая колонка. Принцип тот же, что и для sticky header, но левая колонка (как правило идентифицирующая данные в ряде, например - имя человека) остаётся видна при горизонтальном скролле. +20           <========================================================= CURRENT TASK
+      ✔ Фиксированная левая колонка. Принцип тот же, что и для sticky header, но левая колонка (как правило идентифицирующая данные в ряде, например - имя человека) остаётся видна при горизонтальном скролле. +20 @done(20-03-24 10:42)
 
     `Hacker scope +50`:
       ✔ Сохранение значений для сортировки, фильтрации, видимости колонок (если реализовано) сохранаются в localStorage так, что при обновлении страницы состояние таблицы сохраняется. +20
       ✔ Экспорт данных в CSV файл (только видимые ряды с сохранением сортировки). +20
-      ☐ Значения фильтров для текстовых и enum колонок можно передавать в querystring (приоритет выше, чем у localStorage). +10
+      ☐ Значения фильтров для текстовых и enum колонок можно передавать в querystring (приоритет выше, чем у localStorage). +10           <========================================================= CURRENT TASK
 
 
 
