--- a/TODO
+++ b/TODO
@@ -98,7 +98,13 @@ Todo:
     `Hacker scope +50`:
       ✔ Сохранение значений для сортировки, фильтрации, видимости колонок (если реализовано) сохранаются в localStorage так, что при обновлении страницы состояние таблицы сохраняется. +20
       ✔ Экспорт данных в CSV файл (только видимые ряды с сохранением сортировки). +20
-      ☐ Значения фильтров для текстовых и enum колонок можно передавать в querystring (приоритет выше, чем у localStorage). +10           <========================================================= CURRENT TASK
+      ✔ Значения фильтров для текстовых и enum колонок можно передавать в querystring (приоритет выше, чем у localStorage). +10 @done(20-03-24 12:08)
+    
+    `Extra features`:
+      ☐ Use debounce for global search input           <========================================================= CURRENT TASK
+      ☐ UX - add numbers to multiple sorted columns to visually define sort order
+      ☐ Implement own virtualization
+      ☐ Rewrite app and move logic to reducers.
 
 
 
