feat: implement sort-order visibility fix: fix multiple sort

--- a/TODO
+++ b/TODO
@@ -108,8 +108,8 @@ Todo:
       ✔ Implement Material-UI @done(20-04-01 16:33)
       ✔ Implement own virtualization @done(20-04-10 15:10)
       ✔ Change app icon @done(20-04-10 15:37)
-      ☐ UX - add numbers to multiple sorted columns to visually define 'multiple sort order'           <========================================================= CURRENT TASK
-      ☐ Fix logic for search column popup - it's not working properly for opened popup and filtered value for current item
+      ✔ UX - add numbers to multiple sorted columns to visually define 'multiple sort order' @done(20-04-10 16:37)
+      ☐ Fix logic for search column popup - it's not working properly for opened popup and filtered value for current item           <========================================================= CURRENT TASK
       ☐ Rewrite app and move logic to reducers.
         ☐ Containers should only contain connection to components, (e.g. there shouldn't be any jsx)
       ☐ Rewrite app using `Redux Saga`
