--- a/TODO
+++ b/TODO
@@ -113,8 +113,8 @@ Todo:
       ✔ Fix sort logic for one sorted column from 'ascending to descending' @done(20-04-11 09:44)
       ✔ Rewrite app and move logic out of components @done(20-04-16 18:12)
         ✔ Containers should only contain connection to components, (e.g. there shouldn't be any jsx) @done(20-04-16 18:12)
-      ☐ Rewrite app using `Redux Saga`           <========================================================= CURRENT TASK
-      ☐ Consider to use sticky header and add footer (with info about filtered data, and with button delete selected items)
+      - Rewrite app using `Redux Saga` (*Overengineering*)
+      ☐ Consider to use sticky header and add footer (with info about filtered data, and with button delete selected items)           <========================================================= CURRENT TASK
 
 
 
