feat: implement gh-pages deploy

--- a/TODO
+++ b/TODO
@@ -114,7 +114,8 @@ Todo:
       ✔ Rewrite app and move logic out of components @done(20-04-16 18:12)
         ✔ Containers should only contain connection to components, (e.g. there shouldn't be any jsx) @done(20-04-16 18:12)
       - Rewrite app using `Redux Saga` (*Overengineering*)
-      ☐ Consider to use sticky header and add footer (with info about filtered data, and with button delete selected items)           <========================================================= CURRENT TASK
+      ☐ Deploy on GH-pages           <========================================================= CURRENT TASK
+      ☐ Consider to use sticky header and add footer (with info about filtered data, and with button delete selected items)
 
 
 
